k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: art-gallery
  labels:
    name: art-gallery
